--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 
-name = "instill-python-sdk"
-version = "0.0.5"
+name = "instill-sdk"
+version = "0.0.1"
 description = "python sdk for Instill AI products"
 
 packages = [{ include = "instill_sdk" }]
@@ -10,8 +10,8 @@ license = "MIT"
 authors = ["instill-ai <drop@instill.tech>"]
 
 readme = "README.md"
-homepage = "https://pypi.org/project/instill-python-sdk"
-documentation = "https://instill-python-sdk.readthedocs.io"
+homepage = "https://pypi.org/project/instill-sdk"
+documentation = "https://instill-sdk.readthedocs.io"
 repository = "https://github.com/instill-ai/python-sdk"
 
 keywords = [
