--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,9 @@ google-api-core = "^2.11.1"
 googleapis-common-protos = "^1.60.0"
 protoc-gen-openapiv2 = "^0.0.1"
 types-protobuf = "^4.24.0.1"
+pydantic = "^2.3.0"
+pyyaml = "^6.0.1"
+types-pyyaml = "^6.0.12.11"
 
 [tool.poetry.dev-dependencies]
 
