--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "instill_sdk/protogen"]
 	path = instill_sdk/protogen
 	url = git@github.com:instill-ai/protogen-python.git
+	ignore = dirty
