chore(gitmodules): use https

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "instill_sdk/protogen"]
 	path = instill_sdk/protogen
-	url = git@github.com:instill-ai/protogen-python.git
+	url = https://github.com/instill-ai/protogen-python
 	ignore = dirty
