chore: add ignore

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,5 @@
 [submodule "instill/protogen"]
 	path = instill/protogen
 	url = https://github.com/instill-ai/protogen-python.git
+	ignore = dirty
+
