ci(workflows): adopt release workflows (#17)
Because

- build and release wheels for sdk package

This commit

- rename module from `instill_sdk` to `instill`
- adopt release-please workflows to publish to both `test` and
`official` instance of PyPI

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,5 @@
-[submodule "instill_sdk/protogen"]
-	path = instill_sdk/protogen
-	url = https://github.com/instill-ai/protogen-python
+[submodule "instill/protogen"]
+	path = instill/protogen
+	url = https://github.com/instill-ai/protogen-python.git
 	ignore = dirty
+
