--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ classifiers = [
 [tool.poetry.dependencies]
 
 python = "^3.8"
-grpcio = "1.53.0"
+grpcio = "^1.58.0"
 protobuf = "^4.24.2"
 google-api-core = "^2.11.1"
 googleapis-common-protos = "^1.60.0"
