--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,15 +26,13 @@ classifiers = [
 [tool.poetry.dependencies]
 
 python = "^3.8"
-grpcio = "^1.58.0"
-protobuf = "^4.24.2"
-google-api-core = "^2.11.1"
-googleapis-common-protos = "^1.60.0"
-protoc-gen-openapiv2 = "^0.0.1"
-types-protobuf = "^4.24.0.1"
-pydantic = "^2.3.0"
+grpcio = "^1.57.0"
 pyyaml = "^6.0.1"
+numpy = "^1.21.0"
+protobuf = "^4.24.2"
+types-protobuf = "^4.24.0.1"
 types-pyyaml = "^6.0.12.11"
+pydantic = "*"
 
 [tool.poetry.dev-dependencies]
 
@@ -70,6 +68,11 @@ sniffer = "*"
 MacFSEvents = { version = "*", platform = "darwin" }
 pync = { version = "*", platform = "darwin" }
 ipython = "^8.10.0"
+mypy-protobuf = "^3.5.0"
+grpcio-tools = "^1.57.0"
+google-api-core = "^2.11.1"
+googleapis-common-protos = "^1.60.0"
+protoc-gen-openapiv2 = "^0.0.1"
 
 # Publish
 twine = "^4.0.2"
@@ -93,6 +96,7 @@ exclude = '''
     | _build
     | buck-out
     | protogen
+    | protobufs
     | build
     | dist
   )/
@@ -104,7 +108,7 @@ exclude = '''
 [tool.isort]
 
 profile = "black"
-skip_glob = ["**/protogen/*"]
+skip_glob = ["**/protogen/*", "**/protobufs/*"]
 
 [tool.mypy]
 
@@ -116,10 +120,7 @@ cache_dir = ".cache/mypy/"
 
 [tool.pytest.ini_options]
 
-filterwarnings = [
-  "ignore:::.*google",
-  "ignore:::.*pkg_resources*",
-]
+filterwarnings = ["ignore:::.*google", "ignore:::.*pkg_resources*"]
 
 addopts = """
 --strict-markers
