--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,8 @@ pillow = "^10.1.0"
 
 [tool.poetry.dev-dependencies]
 
+poetry-plugin-export = "^1.6.0"
+
 # Formatters
 black = "^22.1"
 tomli = "*"     # missing 'black' dependency
