--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,10 +37,9 @@ googleapis-common-protos = "^1.60.0"
 protoc-gen-openapiv2 = "^0.0.1"
 pydantic = "*"
 pillow = "^10.1.0"
+ray = {version = "2.8.0", extras = ["serve"]}
 
 [tool.poetry.dev-dependencies]
-
-poetry-plugin-export = "^1.6.0"
 
 # Formatters
 black = "^22.1"
