--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ classifiers = [
 
 [tool.poetry.dependencies]
 
-python = "^3.8"
+python = ">=3.8,<3.13"
 grpcio = "^1.54.2"
 pyyaml = "^6.0.1"
 numpy = "^1.21.0"
@@ -68,7 +68,7 @@ mkdocs = "~1.3"
 pygments = "^2.11.1"
 
 # Tooling
-pyinstaller = "*"
+pyinstaller = "5.13.1"
 sniffer = "*"
 MacFSEvents = { version = "*", platform = "darwin" }
 pync = { version = "*", platform = "darwin" }
