--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ classifiers = [
 [tool.poetry.dependencies]
 
 python = ">=3.8,<3.13"
-grpcio = "^1.54.2"
+grpcio = "^1.59.0"
 pyyaml = "^6.0.1"
 numpy = "^1.21.0"
 protobuf = "^4.24.2"
@@ -35,9 +35,9 @@ types-pyyaml = "^6.0.12.11"
 google-api-core = "^2.11.1"
 googleapis-common-protos = "^1.60.0"
 protoc-gen-openapiv2 = "^0.0.1"
-pydantic = "*"
+pydantic = "^2.5.0"
 pillow = "^10.1.0"
-ray = {version = "2.8.0", extras = ["serve"]}
+ray = {version = "2.9.0", extras = ["serve"]}
 
 [tool.poetry.dev-dependencies]
 
