--- a/.pylint.ini
+++ b/.pylint.ini
@@ -7,7 +7,7 @@ extension-pkg-whitelist=
 
 # Add files or directories to the blacklist. They should be base names, not
 # paths.
-ignore=CVS,protogen,protobufs
+ignore=CVS,protogen,protobufs,schema
 
 # Add files or directories matching the regex patterns to the blacklist. The
 # regex matches against base names, not paths.
@@ -68,6 +68,7 @@ disable=
     too-many-ancestors,
     too-many-instance-attributes,
     too-many-statements,
+    too-many-lines,
     attribute-defined-outside-init,
     unsupported-assignment-operation,
     unsupported-delete-operation,
