--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,6 +78,7 @@ ipykernel = "^6.28.0"
 mypy-protobuf = "^3.5.0"
 grpcio-tools = "^1.54.2"
 datamodel-code-generator = "^0.25.2"
+jsonref = "^1.1.0"
 
 # Publish
 twine = "^4.0.2"
