--- a/samples/tinyllama-cpu/instill.yaml
+++ b/samples/tinyllama-cpu/instill.yaml
@@ -2,7 +2,7 @@ build:
   gpu: false
   python_version: "3.11"  # support only 3.11
   python_packages:
-    - '"torch==2.2.1 --index-url https://download.pytorch.org/whl/cpu"'
+    - torch==2.2.1 --index-url https://download.pytorch.org/whl/cpu
     - transformers==4.36.2
     - accelerate==0.25.0
 repo: admin/tinyllama-cpu  # make sure the format is {user-id}/{model-id} and the
