fix(ray): support target platform for image building (#127)
Because

- Image built with `build` module may have mismatch target platform

This commit

- support target platform for image building

--- a/instill/helpers/Dockerfile
+++ b/instill/helpers/Dockerfile
@@ -2,7 +2,10 @@ ARG RAY_VERSION
 ARG PYTHON_VERSION
 ARG CUDA_SUFFIX
 
-FROM rayproject/ray:${RAY_VERSION}-py${PYTHON_VERSION}${CUDA_SUFFIX}
+FROM rayproject/ray:${RAY_VERSION}-py${PYTHON_VERSION}${CUDA_SUFFIX}-aarch64 as base-arm64
+FROM rayproject/ray:${RAY_VERSION}-py${PYTHON_VERSION}${CUDA_SUFFIX} as base-amd64
+
+FROM base-${TARGETARCH}
 
 RUN sudo apt-get update && sudo apt-get install curl -y
 
