--- a/instill/helpers/Dockerfile
+++ b/instill/helpers/Dockerfile
@@ -1,11 +1,9 @@
 ARG RAY_VERSION
 ARG PYTHON_VERSION
 ARG CUDA_SUFFIX
+ARG TARGET_ARCH_SUFFIX
 
-FROM rayproject/ray:${RAY_VERSION}-py${PYTHON_VERSION}${CUDA_SUFFIX}-aarch64 as base-arm64
-FROM rayproject/ray:${RAY_VERSION}-py${PYTHON_VERSION}${CUDA_SUFFIX} as base-amd64
-
-FROM base-${TARGETARCH}
+FROM rayproject/ray:${RAY_VERSION}-py${PYTHON_VERSION}${CUDA_SUFFIX}${TARGET_ARCH_SUFFIX}
 
 RUN sudo apt-get update && sudo apt-get install curl -y
 
