--- a/instill/helpers/Dockerfile
+++ b/instill/helpers/Dockerfile
@@ -7,6 +7,11 @@ FROM rayproject/ray:${RAY_VERSION}-py${PYTHON_VERSION}${CUDA_SUFFIX}${TARGET_ARC
 
 RUN sudo apt-get update && sudo apt-get install curl -y
 
+ARG SYSTEM_PACKAGES
+RUN for package in ${SYSTEM_PACKAGES}; do \
+    sudo apt-get install $package; \
+    done;
+
 ARG PACKAGES
 RUN for package in ${PACKAGES}; do \
     pip install --default-timeout=1000 --no-cache-dir $package; \
