--- a/instill/helpers/init-templates/Dockerfile
+++ b/instill/helpers/init-templates/Dockerfile
@@ -18,6 +18,9 @@ RUN for package in ${PACKAGES}; do \
     pip install --default-timeout=1000 --no-cache-dir $package; \
     done;
 
+ARG SDK_VERSION
+RUN pip install --default-timeout=1000 --no-cache-dir instill-sdk==${SDK_VERSION}
+
 WORKDIR /home/ray
 COPY --chown=ray:users --exclude=model.py . .
 COPY --chown=ray:users model.py model.py
