feat(build): support local sdk wheel for building model image

--- a/instill/helpers/init-templates/Dockerfile
+++ b/instill/helpers/init-templates/Dockerfile
@@ -21,7 +21,11 @@ RUN for package in ${PACKAGES}; do \
 COPY --chown=ray:users --exclude=model.py . .
 
 ARG SDK_VERSION
-RUN pip install --default-timeout=1000 --no-cache-dir instill-sdk==${SDK_VERSION}
+RUN if [ ! -f instill_sdk-${SDK_VERSION}dev-py3-none-any.whl ]; then \
+        pip install --default-timeout=1000 --no-cache-dir instill-sdk==${SDK_VERSION}; \
+    else \
+        pip install instill_sdk-${SDK_VERSION}dev-py3-none-any.whl; \
+    fi;
 
 WORKDIR /home/ray
 COPY --chown=ray:users model.py _model.py
