--- a/instill/helpers/init-templates/Dockerfile
+++ b/instill/helpers/init-templates/Dockerfile
@@ -18,6 +18,14 @@ RUN for package in ${PACKAGES}; do \
     pip install --default-timeout=1000 --no-cache-dir $package; \
     done;
 
-WORKDIR /home/ray
 COPY --chown=ray:users --exclude=model.py . .
-COPY --chown=ray:users model.py model.py
+
+ARG SDK_VERSION
+RUN if [ ! -f instill_sdk-${SDK_VERSION}dev-py3-none-any.whl ]; then \
+        pip install --default-timeout=1000 --no-cache-dir instill-sdk==${SDK_VERSION}; \
+    else \
+        pip install instill_sdk-${SDK_VERSION}dev-py3-none-any.whl; \
+    fi;
+
+WORKDIR /home/ray
+COPY --chown=ray:users model.py _model.py
