--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ classifiers = [
 
 [tool.poetry.dependencies]
 
-python = ">=3.9,<3.12"
+python = ">3.9.1,<3.12"
 grpcio = "^1.59.0"
 pyyaml = "^6.0.1"
 numpy = "^1.21.0"
