--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,7 @@ protoc-gen-openapiv2 = "^0.0.1"
 pydantic = ">=1.10.13"
 python = ">3.9.1,<3.12"
 pyyaml = "^6.0.1"
-ray = "^2.44.1"
+ray = "2.47.0"
 requests = "^2.32.3"
 starlette = "^0.46.1"
 types-protobuf = "^4.24.0.1"
