--- a/instill/helpers/init-templates/instill.yaml
+++ b/instill/helpers/init-templates/instill.yaml
@@ -1,20 +1,20 @@
 build:
-  # set to true if your model requires GPU
+  # (Required) Set to true if your model requires GPU.
   gpu: true
 
-  # python version, currently only support 3.11
+  # (Optional) Python version, currently only support 3.11.
   python_version: "3.11"
 
-  # cuda version if `gpu` is set to true
-  # support 11.5, 11.6 ,11.7 ,11.7 ,12.1
-  cuda_version: "12.1"
+  # (Optional) CUDA version if `gpu` is set to true
+  # support 12.1, 12.2, 12.3, 12.4, 12.5, 12.6, 12.7, 12.8
+  cuda_version: "12.8"
 
-  # a list of python packages in the format of {package-name}=={version}
+  # (Optional) A list of python packages in the format of {package-name}=={version}
   # python_packages:
   #   - torch==2.3.1
   #   - transformers==4.41.2
 
-  # a list of system packages from apt package manager
+  # (Optional) A list of system packages from apt package manager
   # system_packages:
   #   - htop
   #   - libglib2.0-0
