--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,17 +35,18 @@ jsonschema = "^4.20.0"
 numpy = "^1.21.0"
 pillow = "^10.1.0"
 pkginfo = "^1.12.1.2"
-protobuf = "^4.24.2"
+protobuf = "4.25.3"
 protoc-gen-openapiv2 = "^0.0.1"
 pydantic = ">=1.10.13"
 python = ">3.9.1,<3.12"
 pyyaml = "^6.0.1"
 ray = "2.47.0"
-requests = "^2.32.3"
+requests = "2.32.3"
 starlette = "^0.46.1"
 types-protobuf = "^4.24.0.1"
 types-pyyaml = "^6.0.12.11"
-types-requests = "^2.32.0.20240712"
+types-requests = "2.31.0.6"
+urllib3 = "1.26.20"
 uvicorn = "^0.34.0"
 virtualenv = "^20.30.0"
 
@@ -145,7 +146,7 @@ pygments = "^2.11.1"
 # Tooling
 MacFSEvents = {version = "*", platform = "darwin"}
 datamodel-code-generator = "^0.25.2"
-grpcio-tools = "^1.54.2"
+grpcio-tools = "1.62.0"
 ipykernel = "^6.28.0"
 ipython = "^8.10.0"
 jsonref = "^1.1.0"
