--- a/release-please/config.json
+++ b/release-please/config.json
@@ -3,9 +3,9 @@
     ".": {
       "release-type": "python",
       "draft": false,
-      "prerelease": true,
+      "prerelease": false,
       "bump-minor-pre-major": true,
-      "bump-patch-for-minor-pre-major": false
+      "bump-patch-for-minor-pre-major": true
     }
   },
   "changelog-sections": [
