--- a/instill/helpers/docker/Dockerfile.mlc-llm
+++ b/instill/helpers/docker/Dockerfile.mlc-llm
@@ -31,7 +31,15 @@ FROM rayproject/ray:${RAY_VERSION}${PYTHON_VERSION}${CUDA_VERSION} AS base-cpu-a
 # Install mlc-llm from pre-built wheels
 RUN pip install git-lfs
 
-# TODO: Build mlc-llm from source
+ARG MLC_LLM_VERSION=0.19.0
+ARG PYTHON_VERSION=-py311
+RUN wget -nv "https://github.com/instill-ai/package/releases/download/v0.9.dev0/mlc_ai_cpu-${MLC_LLM_VERSION}-cp${PYTHON_VERSION#-py}-cp${PYTHON_VERSION#-py}-manylinux_2_28_aarch64.whl" && \
+    pip install "mlc_ai_cpu-${MLC_LLM_VERSION}-cp${PYTHON_VERSION#-py}-cp${PYTHON_VERSION#-py}-manylinux_2_28_aarch64.whl" && \
+    rm "mlc_ai_cpu-${MLC_LLM_VERSION}-cp${PYTHON_VERSION#-py}-cp${PYTHON_VERSION#-py}-manylinux_2_28_aarch64.whl"
+
+RUN wget -nv "https://github.com/instill-ai/package/releases/download/v0.9.dev0/mlc_llm_cpu-${MLC_LLM_VERSION}-cp${PYTHON_VERSION#-py}-cp${PYTHON_VERSION#-py}-manylinux_2_28_aarch64.whl" && \
+    pip install "mlc_llm_cpu-${MLC_LLM_VERSION}-cp${PYTHON_VERSION#-py}-cp${PYTHON_VERSION#-py}-manylinux_2_28_aarch64.whl" && \
+    rm "mlc_llm_cpu-${MLC_LLM_VERSION}-cp${PYTHON_VERSION#-py}-cp${PYTHON_VERSION#-py}-manylinux_2_28_aarch64.whl"
 
 #####################################################################################################
 # GPU Base Image (amd64)
