--- a/.pylint.ini
+++ b/.pylint.ini
@@ -69,6 +69,7 @@ disable=
     too-many-instance-attributes,
     too-many-statements,
     too-many-lines,
+    too-many-positional-arguments,
     attribute-defined-outside-init,
     unsupported-assignment-operation,
     unsupported-delete-operation,
@@ -408,5 +409,5 @@ known-third-party=enchant
 [EXCEPTIONS]
 
 # Exceptions that will emit a warning when being caught. Defaults to
-# "Exception"
-overgeneral-exceptions=Exception
+# "builtins.Exception"
+overgeneral-exceptions=builtins.Exception
