test(instill): improve unit test coverage

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,12 +18,11 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.11"
+          python-version: "3.12"
 
-      - uses: Gr1N/setup-poetry@v8
-
-      - name: Check dependencies
-        run: make doctor
+      - uses: abatilo/actions-poetry@v4
+        with:
+          poetry-version: 2.1.2
 
       - uses: actions/cache@v3
         with:
