--- a/instill/helpers/init-templates/instill.yaml
+++ b/instill/helpers/init-templates/instill.yaml
@@ -2,15 +2,19 @@ build:
   # (Required) Set to true if your model requires GPU.
   gpu: true
 
+  # (Optional) LLM runtime to use.
+  # Supported: mlc-llm, vllm, transformers
+  # llm_runtime: mlc-llm
+
   # (Optional) Python version
-  # support >=3.9 and <3.13 and default to 3.12
+  # Supported: >=3.9 and <3.13 and default to 3.12
   # python_version: "3.12"
 
   # (Optional) CUDA version if `gpu` is set to true
-  # support >=12.2 and <=12.8 and default to 12.8
+  # Supported: >=12.2 and <=12.8 and default to 12.8
   # cuda_version: "12.8"
 
-  # (Optional) A list of python packages in the format of {package-name}=={version}
+  # (Optional) A list of python packages in the format {package-name}=={version}
   # python_packages:
   #   - numpy==1.21.0
   #   - pandas==2.1.0
